--- a/flaskapp/templates/service.yaml
+++ b/flaskapp/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "flaskapp.fullname" . }}
-  labels:
-    {{- include "flaskapp.labels" . | nindent 4 }}
+  name: "{{ .Values.app.name }}-service"
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "flaskapp.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.app.name }}
+  ports:
+  - port: {{ .Values.app.port }}
+    targetPort: {{ .Values.app.targetPort }}
+    nodePort: {{ .Values.app.nodePort }}
+  type: {{ .Values.app.type }}
